# bloomberg-mcp

./: .gitignore  .mcp.json  README.md  launcher.py  pyproject.toml  run_server.py
.claude-plugin/: plugin.json
commands/: bloomberg-setup.md
data/: bql_data_items.parquet
references/: _tree-index.md  field-search.md
references/credit/: cds.md  issuance.md  ratings.md
references/curves/: curves.md
references/equity/: fundamental.md  market.md
references/fixed-income/: bonds.md  portfolio.md  structured.md  universe-screening.md
references/functions/: functions.md
references/funds/: funds.md
references/returns/: returns.md
references/securitized/: cmbs-analytics.md  trades-spreads.md
scripts/: detect-python.py  setup-bloomberg-mcp.ps1
server/: bloomberg_client.py  bql_builder.py  bql_subprocess.py  chart_engine.py  requirements.txt  server.py  utils.py
skills/bloomberg-query/: SKILL.md
skills/bloomberg-setup/: SKILL.md
tests/: 01_equity_px_last.bql  02_equity_eps.bql  03_equity_historical.bql  04_equity_index_screen.bql  05_equity_pe_avg.bql  06_equity_peers.bql  07_fi_bond_analytics.bql  08_fi_bond_yield_types.bql  09_fi_bond_duration_types.bql  10_fi_bondsuniv_top.bql  11_fi_bondsuniv_filter.bql  12_fi_debt_chain.bql  13_rating_sp.bql  14_rating_moody.bql  15_rating_bbg_composite.bql  16_cds_spread.bql  17_cds_historical.bql  18_total_return.bql  19_return_series.bql  20_curve_members.bql  21_curve_rate.bql  22_fund_screen.bql  23_func_avg.bql  24_func_stdev.bql  25_func_group.bql  26_func_zscore.bql  27_issuance_amt.bql
