[project]
name = "bloomberg-mcp"
version = "1.1.0"
description = "Self-documenting MCP server for Bloomberg Terminal data"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "pandas>=2.0,<3",
    "xbbg[pandas]>=1.2.6,<2",
    "blpapi>=3.24.0",
]

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
