[project]
name = "bloomberg-mcp"
version = "1.2.0"
description = "Self-documenting MCP server for Bloomberg Terminal data"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "pandas>=2.0,<3",
    "xbbg[pandas]>=1.2.6,<2",
    "blpapi>=3.24.0",
    # Plotting stack — chart_engine uses matplotlib + altair; seaborn for
    # statistical charts. Bundled so the venv can render charts from fetched data.
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "altair>=5.0,<6",
]

[[tool.uv.index]]
name = "bloomberg"
url = "https://blpapi.bloomberg.com/repository/releases/python/simple/"
